fix spacing:

--- a/themes/sherpa/styles/_sections.sass
+++ b/themes/sherpa/styles/_sections.sass
@@ -307,9 +307,10 @@ section
           width: 25%
           margin-top: 2em
   &#say-hi
+    max-width: 90%
     +border-gradient(rainbow)
     background: #000000
-    margin: 2em auto
+    margin: 4em auto
     padding: 2em
     +breakpoint(medium)
       width: 30rem
